# gnome-arcade

./: .gitignore  CMakeLists.txt  README.md  gnome-arcade.desktop  gnome-arcade.spec  sconstruct
data/rom/: ROM.TXT
data/tile/: TILE.TXT
header/: app.h  blacklist.h  config.h  filedownloader.h  filter.h  global.h  inforom.h  joy.h  mame.h  pref.h  rescan.h  rom.h  ssaver.h  ui.h  uipref.h  util.h  view.h  vlc.h  www.h
po/: LINGUAS  POTFILES.in  makemo.sh  makepot.sh
res/: blacklist.ini  gnome-arcade.css
script/: fetchrom.sh  meson.build  valgrind.sh
src/: CMakeLists.txt  app.c  blacklist.c  config.c  filedownloader.c  filter.c  inforom.c  joy.c  mame.c  pref.c  rescan.c  rom.c  ssaver.c  ui.c  uipref.c  util.c  view.c  vlc.c  www.c
